# esun-event-investigation-v2

./: AGENTS.md  Dockerfile  QUICKSTART.md  docker-compose.yml  pyproject.toml  业务实现说明.md  项目总体说明.md
src/: app.py  score_records.py  test.py
src/output/: result_20260211_173508.json  result_20260211_214839.json  result_20260211_215348.json  result_20260211_221203.json  result_20260211_222839.json  result_20260211_223023.json  result_20260211_223354.json  result_20260211_223553.json  result_20260211_223712.json  result_20260211_223919.json  result_20260211_224025.json  result_20260211_224207.json  result_20260211_224734.json  result_20260212_071427.json  result_20260212_071850.json  result_20260212_072008.json  result_20260212_073050.json  result_20260212_084904.json  result_20260212_092137.json  result_20260212_093135.json  result_20260212_093150.json  result_20260212_093956.json  result_20260212_102254.json  result_20260212_110933.json  result_20260212_111012.json  result_20260212_120349.json  result_20260212_120449.json  result_20260212_164628.json  result_20260212_170534.json
src/prompts/: evaluate_record_risk.md
src/records/: __init__.py  auth.py  call_recording.py  content.py  email.py  ideal.py  qtrade.py  trading_recording.py
src/score/: score_records.py
src/utils/: __init__.py  config.py  llm.py  logger.py
