[project]
name = "event-investigation-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.8",
    "cachetools>=7.0.0",
    "dashscope>=1.25.12",
    "loguru>=0.7.3",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
